<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/title"
        android:textSize="37sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold|italic"
        android:typeface="normal"
        android:textScaleX="1.0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/subtitle"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:typeface="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="#000000"
        android:layout_marginHorizontal="@android:dimen/app_icon_size"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"/>



    <Button
        android:id="@+id/btnManners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manners"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="25dp"/>

</LinearLayout>